--- a/config.json
+++ b/config.json
@@ -8,3 +8,4 @@ Temporary commit content 52
 Temporary commit content 57
 Temporary commit content 62
 Temporary commit content 72
+Temporary commit content 78
