--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ Temporary commit content 198
 Temporary commit content 218
 Temporary commit content 221
 Temporary commit content 232
+Temporary commit content 252
